# etk

./: .bazelignore  .bazelrc  .gitignore  .markdownlint.yaml  .npmrc  .prettierrc.yaml  .swcrc  BUILD.bazel  LICENSE  WORKSPACE  jest.integration.config.js  jest.unit.config.js  package.json  pnpm-lock.yaml  publish.sh  swc.test.json  tsconfig.base.json  tsconfig.bazel.json
datastores/nestjs-dmq-postgres/prisma/: BUILD.bazel  schema.prisma
examples/domain/: BUILD.bazel
examples/domain/src/: index.ts
tools/: BUILD.bazel  bazel_deps.bzl  bazel_workspace_status.sh  module.bzl  workspace_dir.bzl
