load("//tools:workspace_dir.bzl", "write_workspace_dir")
load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load("@aspect_rules_js//npm:defs.bzl", "npm_link_package")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@npm//:defs.bzl", "npm_link_all_packages")

package(default_visibility = ["//visibility:public"])

write_workspace_dir(
  name = "workspace_dir",
)

ts_config(
  name = "tsconfig",
  src = "tsconfig.bazel.json",
)

npm_link_package(
  name = "node_modules/@omedym/nestjs-dmq-repository",
  src = "//packages/nestjs-dmq-respository:npm",
)

npm_link_package(
  name = "node_modules/@omedym/nestjs-dmq-datastore-client-postgres",
  src = "//datastores/nextjs-dmq-postgres:npm",
)

npm_link_package(
  name = "node_modules/@omedym/nestjs-dmq",
  src = "//packages/nestjs-dmq:npm",
)

npm_link_all_packages(name = "node_modules")

copy_to_bin(
  name = "npm_license",
  srcs = ["LICENSE"],
  visibility = ["//visibility:public"],
)

copy_to_bin(
  name = "jest_config_unit",
  srcs = ["jest.unit.config.js"],
  visibility = ["//visibility:public"],
)

copy_to_bin(
  name = "jest_config_integration",
  srcs = ["jest.integration.config.js"],
  visibility = ["//visibility:public"],
)

filegroup(
  name = "test_unit_deps",
  srcs = [
    "//:node_modules/@jest/core",
    "//:node_modules/@jest/transform",
    "//:node_modules/@nestjs/testing",
    "//:node_modules/@types/jest",
    "//:node_modules/@types/supertest",
    "//:node_modules/c8",
    "//:node_modules/jest-junit",
    "//:node_modules/jest-mock-extended",
    "//:node_modules/neverthrow",
    "//:node_modules/reflect-metadata",
    "//:node_modules/supertest",
    "//:node_modules/ts-jest",
  ],
  visibility = ["//visibility:public"],
)

filegroup(
  name = "test_integration_deps",
  srcs = [
    ":test_unit_deps",
    "//:node_modules/@bazel/runfiles",
    "//:node_modules/@nestjs/testing",
    "//:node_modules/@prisma/client",
    "//:node_modules/@testcontainers/postgresql",
    "//:node_modules/@types/async-redis",
    "//:node_modules/async-redis",
    "//:node_modules/prisma",
    "//:node_modules/testcontainers",
  ],
  data = [
    "//datastores/nestjs-dmq-postgres/prisma:prisma_schema_postgres",
  ],
  visibility = ["//visibility:public"],
)
