load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_config(
    name = "tsconfig_bazel",
    src = "tsconfig.bazel.json",
    deps = ["//:tsconfig"],
)

_DEPS = [
  # Dev Dependencies
  "//:node_modules/@types/node",
]

ts_project(
  name = "ts",
  srcs = glob(["src/**/*.ts"], exclude = ["**/*.test.ts", "test/**/*.ts"]),
  declaration = True,
  incremental = True,
  root_dir = "src",
  resolve_json_module = True,
  tags = ["ts"],
  tsconfig = ":tsconfig_bazel",
  validate = False,
  deps = _DEPS,
)
